tests/paczka1/small_fuzzy/29275538.err
Error in line 6: O5H6IaOiUWC A346 56,2
Error in line 5: cgH6QcT3uUF A948 29,8
